--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -23,11 +23,13 @@
 
         {# on succes, redirect user to home page #}
         <input type="hidden" name="_target_path" value="/home"/>
-        
+
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
         <button type="submit">login</button>
     </form>
+
+    <a class="nav-link active" href="{{ path('app_register') }}"><span>Pas encore de compte ? C'est par </span>ici</a>
     
 </div>
 
