--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,8 @@
         {% endblock %}
     </head>
     <body>
+        {% include "_header.html.twig" %}
         {% block body %}{% endblock %}
+        {% include "_footer.html.twig" %}
     </body>
 </html>
