--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -3,6 +3,7 @@
         <ul>
             <li>Accueil</li>
             <li>Chats</li>
+            {{ dump(app.user) }}
         </ul>
     </nav>
 </div>
