--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,6 +1,7 @@
-
+@import "~bootstrap/scss/bootstrap";
 @import 'global.scss';
 @import 'home.scss';
 @import 'variables.scss';
 @import '_header.scss';
 @import '_footer.scss';
+@import 'articles.scss';
