--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,10 +9,12 @@
 		<section id="actualité">
 		{% for article in articles %}
 			<article>
-			<img class="article-picture" src='/pictures/{{article.picture}}'>
-			<h1 class="article-title">{{ article.title }}</h1>
-			<p>{{ article.date|date('Y-m-d H:i') }}</p>
-			<p class="article-text">{{ article.text}}</p>
+                <div class="article-picture">
+                    <img class="article-picture-background" src='/pictures/{{article.picture}}'>
+                </div>
+                <h1 class="article-title">{{ article.title }}</h1>
+                <p>{{ article.date|date('Y-m-d H:i') }}</p>
+                <p class="article-text">{{ article.text}}</p>
 			</article>
 			<hr>
 		{% endfor %}
