--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,4 +1,6 @@
-@import "~bootstrap/scss/bootstrap";
+@import '/assets/slick/slick.css';
+@import '/assets/slick/slick-theme.css';
+
 @import 'global.scss';
 @import 'home.scss';
 @import 'variables.scss';
