--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,6 +1,6 @@
 @import '/assets/slick/slick.css';
 @import '/assets/slick/slick-theme.css';
-
+@import "~bootstrap/scss/bootstrap";
 @import 'global.scss';
 @import 'home.scss';
 @import 'variables.scss';
