--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -14,9 +14,19 @@
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
+    
     <form action="{{ path('login') }}" method="post">
-        <label for="username">Email:</label>
-        <input type="text" id="username" name="_username"     value="{{ last_username }}"/>
+    <div class="mb-3">
+        <label for="username" class="form-label">Email</label>
+        <input type="email" class="form-control" id="username" name="_username" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    </div>
+
+
+
+    
+        {# <label for="username">Email:</label>
+        <input type="text" id="username" name="_username"     value="{{ last_username }}"/> #}
 
         <label for="password">Password:</label>
         <input type="password" id="password" name="_password"/>
