fist steps with geoloc

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,3 +1,4 @@
+@import 'bootstrap-icons/font/bootstrap-icons.css';
 @import '/assets/slick/slick.css';
 @import '/assets/slick/slick-theme.css';
 @import "~bootstrap/scss/bootstrap";
