--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,4 +1,5 @@
 @import 'bootstrap-icons/font/bootstrap-icons.css';
+@import "https://use.fontawesome.com/releases/v5.15.4/js/all.js";
 @import '/assets/slick/slick.css';
 @import '/assets/slick/slick-theme.css';
 @import "~bootstrap/scss/bootstrap";
