--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -56,10 +56,8 @@
     .card {
         height: 300px;
         margin: 0.5em;
-        border-right : 2px solid grey;
-        border-bottom: 2px solid grey;
-        border-left : 1px solid grey;
-        border-top: 1px solid grey;
+        border-radius: 10px;
+        box-shadow: 0px 2px 3px grey;
     }
 
     .card-img-top {
@@ -68,10 +66,10 @@
     }
 
     .cat-picture {
-        height: 100px;
-        width: 100px;
-        border-top-right-radius: 0.25em;
-        overflow: hidden;
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+       
     }
    /*  .cats {
         display: flex;
@@ -91,5 +89,11 @@
     #right, #left {
         max-width: 600px;
         margin-top: 50px;
+    }
+
+    .topcard {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
 }
