--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -1,14 +1,125 @@
-.header {
-    position: absolute;
+#sticky {
+    position: sticky;
     top: 0;
-    height: 3em;
-    width:100%;
-    border: 1px solid black;
-    background-color: darkcyan;
+    background-color: #413d3d;
+    border-bottom-left-radius:1rem;
+    border-bottom-right-radius:1rem;
+}
+
+#logo {
+    color: ivory;
+    display: flex;
+    justify-content: end;
+}
+
+#logo img {
+    height: 30px;
+    margin: 0.2em;
+}
+
+#logo span {
+    color: rgb(14, 188, 55);
+    font-weight: bold;
+}
+
+#logo p {
+    font-size: 1.5rem;
+    margin: 0.2em 0.5em;
+}
+
+header {
+    position: relative;
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-bottom: 0.5rem;
+}
+
+.navi-collaspe { background-color:#ffffff; }
+
+header > a, header button {
+    color: white;
+    text-decoration: none;
+    margin: 0 1rem;
+}
+
+header button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+header .dropdown {
+    position: relative;
+    height: 100%;
+    display: flex;
+}
+header .dropdown .content {
+    display:none;
+}
+
+header .dropdown .content > a {
+    text-decoration:none;
+    color: green;
+    padding: 0.2em 0;
+}
+
+header .dropdown:hover .content {
+    display:flex;
+    flex-direction: column;
+    position: absolute;
+    background-color: red;
+    top: 3rem;
+    width: 120%;
+    padding: 0.5rem 1rem;
+    box-sizing:border-box;
+}
+
+header .icon {
+    display: none;
+}
+
+@media (max-width: 800px) {
+    header > a,
+    header button {
+        display: none; 
+    }
+
+    header .icon {
+        font-size: 2rem;
+        display: block;
+        position: absolute;
+        right: 0;
+        width: 5% !important;
+        padding: 0 !important;
+       }
     
-    ul {
-        display: flex;
-        flex-direction: row;
-        justify-content:space-evenly;
+    header.responsive > a,
+    header.responsive .dropdown {
+        display: block;
+        padding: 0.5em 0;
+        width: 100%;
+        text-align: left;
+    }
+
+    header.responsive button {
+        padding: 0.5em 0;
+        display: block;
+    }
+
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+        height: 100%;
+        min-height: 3.5rem;
+    }
+
+    header .dropdown:hover .content {
+        position: relative;
+        width: 100%;
+        top: 0;
+
     }
 }
