--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -2,8 +2,8 @@ body {
     position: relative;
     max-width: 1080px;
     margin: 0 auto;
-    height: 100vh;
     font-family: 'Montserrat';
+    text-decoration: none;
 }
 
 @font-face
