--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/cba9a9ca6a.js" crossorigin="anonymous"></script>
+        {# <script src="https://code.jquery.com/jquery-3.6.0.js"</script> #}
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -13,11 +14,12 @@
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
+            
+
         {% endblock %}
     </head>
     <body>
         {% include "_header.html.twig" %}
         {% block body %}{% endblock %}
-        {% include "_footer.html.twig" %}
     </body>
 </html>
