--- a/templates/report/index.html.twig
+++ b/templates/report/index.html.twig
@@ -14,28 +14,59 @@
     <p>Vous êtes sur le point de signaler NOM du CHAT</p>
 
     <p>Vous êtes situé(e) aux coordonnées suivantes</p>
-
-    <p>Longitude LNG</p>
-    <p>Latitude </p>
-
+    <div id="infoposition"></div>
     <p>Veuillez remplir le formulaire suivant pour préciser votre signalement</p>
-    
     {{ form_start(form) }}
             <div class="comment_form">
                 <p>
-                {{ form_label(form.stauts, 'status :', {'label_attr': {'class': 'form-label'}}) }}
-                {{ form_widget(form.status, {'attr': {'class': 'form-control'}}) }}
+                {{ form_label(form.coordx, 'coordonnée X :', {'label_attr': {'class': 'form-label'}}) }}
+                {{ form_widget(form.coordx, {'attr': {'class': 'form-control'}}) }}
                 </p>
                 <p>
-                {{ form_label(form.message, 'message (facultatif) :', {'label_attr': {'class': 'form-label'}}) }}
+                {{ form_label(form.coordy, 'coordonnée Y :', {'label_attr': {'class': 'form-label'}}) }}
+                {{ form_widget(form.coordy, {'attr': {'class': 'form-control'}}) }}
+                </p>
+                <p>
+                {{ form_label(form.message, 'message :', {'label_attr': {'class': 'form-label'}}) }}
                 {{ form_widget(form.message, {'attr': {'class': 'form-control'}}) }}
                 </p>
-            </div>
-            <br>
-            <button type="submit" class="btn btn-success">Enregistrer</button>
-            </div>
-        
-        
-        {{ form_end(form) }}
+                <p>
+                {{ form_label(form.status, 'status :', {'label_attr': {'class': 'form-label'}}) }}
+                {{ form_widget(form.status, {'attr': {'class': 'form-control'}}) }}
+                </p>
+                <br>
+                <button type="submit" class="btn btn-warning" onclick="return confirm('Attention, les informations que vous fournissez seront transmises au propriétaire du chat');">Enregistrer</button>
+    {{ form_end(form) }}
+<script>
+function maPosition(position) {
+  var infopos = "Position déterminée :\n";
+  infopos += "Latitude : "+position.coords.latitude +"\n";
+  infopos += "Longitude: "+position.coords.longitude+"\n";
+  document.getElementById("infoposition").innerHTML = infopos;
+
+}
+function erreurPosition(error) {
+    var info = "Erreur lors de la géolocalisation : ";
+    switch(error.code) {
+    case error.TIMEOUT:
+    	info += "Timeout !";
+    break;
+    case error.PERMISSION_DENIED:
+	info += "Vous n’avez pas donné la permission";
+    break;
+    case error.POSITION_UNAVAILABLE:
+    	info += "La position n’a pu être déterminée";
+    break;
+    case error.UNKNOWN_ERROR:
+    	info += "Erreur inconnue";
+    break;
+    }
+}
+if(navigator.geolocation)
+  navigator.geolocation.getCurrentPosition(maPosition, erreurPosition);
+</script>
+
+
+  
 </div>
 {% endblock %}
