--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -54,7 +54,8 @@
     }
 
     .card {
-        height: 300px;
+        height: 200px;
+        width: 150px;
         margin: 0.5em;
         border-radius: 10px;
         box-shadow: 0px 2px 3px grey;
@@ -67,18 +68,18 @@
 
     .cat-picture {
         width: 100%;
-        height: 200px;
+        height: 100px;
         object-fit: cover;
        
     }
-   /*  .cats {
+    .cats {
         display: flex;
         flex-direction: row;
+        justify-content: space-evenly;
         flex-wrap: wrap;
-        gap: 1em;
-        height: 40vh;
+        gap: 0.3rem;
         overflow: scroll;
-    } */
+    } 
 
     h1 {
         font-size: 1.5em;
@@ -95,5 +96,9 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+    }
+
+    .localize {
+        margin: 0.5rem;
     }
 }
